syntax = "proto3";

package microservices_starter.common.event;

import "google/protobuf/timestamp.proto";

message EventMeta {
  google.protobuf.Timestamp created_at = 1;
}